Addition of Existing HE errorsn

--- a/api-reference/essentials/error_codes.mdx
+++ b/api-reference/essentials/error_codes.mdx
@@ -23,57 +23,53 @@ Hyperswitch uses Error codes, types, and messages to communicate errors during A
 | IR_07       | 400                                   | invalid_request_error | Invalid value provided: “field_name”                                                                                                                                | Provide a valid value for the required fields in the expected format. Refer to our API documentation                                                                                          |
 | IR_08       | 400                                   | invalid_request_error | Client secret was not provided                                                                                                                                      | Provide the client secret received in payments/create API response                                                                                                                   |
 | IR_09       | 400                                   | invalid_request_error | The client_secret provided does not match the client_secret associated with the Payment                                                                             | Provide the same client secret received in payments/create API response for the corresponding payment                                                                                |
-| IR_10       | 400                                   | invalid_request_error | Customer has an existing mandate/subscription                                                                                                                           | Cancel the active mandates/subscriptions for the customer before proceeding to delete the customer data                                                                              |
+| IR_10       | 400                                   | invalid_request_error | Customer has an existing mandate/subscription                                                                                                                       | Cancel the active mandates/subscriptions for the customer before proceeding to delete the customer data                                                                              |
 | IR_11       | 400                                   | invalid_request_error | Customer has already been redacted                                                                                                                                  | Customer has already been redacted. No action required                                                                                                                               |
-| IR_12       | 400                                   | invalid_request_error | Reached the maximum refund attempts                                                                                                                                     | Maximum refund attempts reached for this payment. Please contact Hyperswitch support for attempting more refunds for the same payment                                                |
+| IR_12       | 400                                   | invalid_request_error | Reached the maximum refund attempts                                                                                                                                 | Maximum refund attempts reached for this payment. Please contact Hyperswitch support for attempting more refunds for the same payment                                                |
 | IR_13       | 400                                   | invalid_request_error | Refund amount exceeds the payment amount                                                                                                                            | Please verify and pass a refund amount equal to or less than the payment amount                                                                                                    |
 | IR_14       | 400                                   | invalid_request_error | This Payment could not be “current_flow” because it has a “field_name” of “current_value”. The expected state is “states”                                           | Please verify the status of the payment and make sure that you are performing an action that is allowed for the current status of the payment                                        |
 | IR_15       | 400                                   | invalid_request_error | Invalid Ephemeral Key for the customer                                                                                                                              | Please pass the right Ephemeral key for the customer                                                                                                                                 |
 | IR_16       | 400                                   | invalid_request_error | “message”                                                                                                                                                           | Typically used when information involving multiple fields or previously provided information doesn’t satisfy a condition. Refer to our API documentation for required fields and format |
-| IR_17       | 401                                   | invalid_request_error | Access forbidden, an invalid JWT token was used                                                                                                                        | Please provide a valid JWT token to access the APIs                                                                                                                                  |
-| IR_18       |                                    | invalid_request_error | "message"||
-| IR_19       |                                    | invalid_request_error | "message"||
-| IR_20       |                                    | invalid_request_error | "flow" not supported by the "connector"||
-| IR_21       |                                    | invalid_request_error | Missing required params||
-| IR_22       |                                    | invalid_request_error | Access forbidden. Not authorized to access this "resource"||
-| IR_23       |                                    | invalid_request_error |||
-| IR_24       |                                    | invalid_request_error/processing_error | Invalid "wallet_name" wallet token||
-| IR_25       |                                    | invalid_request_error |||
-| IR_26       |                                    | invalid_request_error |||
-| IR_27       |                                    | invalid_request_error |||
+| IR_17       | 401                                   | invalid_request_error | Access forbidden, an invalid JWT token was used                                                                                                                     | Provide a valid JWT token to access the APIs                                                                                                                                  |
+| IR_18       |                                       | invalid_request_error | "message"                                                                                                                                                           | The user is not authorised to update the customer, Contact Org. Admin for the appropriate access.                                                                                                                 |
+| IR_19       |                                       | invalid_request_error | "message"                                                                                                                                                           |                                                                                                                                                                                             |
+| IR_20       |                                       | invalid_request_error | "flow" not supported by the "connector"                                                                                                                             | Requested flow is not supported for this Connector.                                                                                                                              |
+| IR_21       |                                       | invalid_request_error | Missing required params                                                                                                                                             | Please add the required params in the request.                                                                                                                               |
+| IR_22       |                                       | invalid_request_error | Access forbidden. Not authorized to access this "resource"                                                                                                          | Contact Org. Admin for the appropriate access.                                                                                                                              |
+| IR_23       |                                       | invalid_request_error | "message"                                                                                                                                                           | Use a supported file provider.                                                                                                                               |
+| IR_24       |                                       | processing_error      | Invalid "wallet_name" wallet token                                                                                                                                  | Share the correct wallet token.                                                                                                                               |
+| IR_25       |                                       | invalid_request_error | Cannot delete the default payment method                                                                                                                            | Check if the Payment method is activated.                                                                                                                              |
+| IR_26       |                                       | invalid_request_error | Invalid Cookie                                                                                                                                                      | Recheck the site setting for the cookies.                                                                                                                              |
+| IR_27       |                                       | invalid_request_error | Extended card info does not exist                                                                                                                                   | Recheck the card info shared in the request.                                                                                                                              |
+| IR_28       |                                       | invalid_request_error | "message"                                                                                                                                                           | Use a valid currency.                                                                                                                              |
+| IR_29       |                                       | invalid_request_error | "message"                                                                                                                                                           | The data format is invalid for this request.                                                                                                                              |
+| IR_30       |                                       | invalid_request_error | Merchant connector account is configured with invalid config                                                                                                        | Correct the config for merchant connector account                                                                                                                              |
 | CE_00       | Status codes shared by the connectors | connector_error       | “message”                                                                                                                                                           | The error code and message passed from the connectors. Refer to the respective connector’s documentation for more information on the error                                           |
-| CE_01       | 400                                   | processing_error      | Payment failed during authorization with the connector. Retry payment                                                                                                   | Retry the payment again as payment failed at the connector during authorization                                                                                                      |
-| CE_02       | 400                                   | processing_error      | Payment failed during authentication with the connector. Retry payment                                                                                                  | Retry the payment again as payment failed at the connector during authentication                                                                                                     |
-| CE_03       | 400                                   | processing_error      | Capture attempt failed while processing with the connector                                                                                                              | Capture failed for the payment at the connector. Please retry the payment                                                                                                            |
+| CE_01       | 400                                   | processing_error      | Payment failed during authorization with the connector. Retry payment                                                                                               | Retry the payment again as payment failed at the connector during authorization                                                                                                      |
+| CE_02       | 400                                   | processing_error      | Payment failed during authentication with the connector. Retry payment                                                                                              | Retry the payment again as payment failed at the connector during authentication                                                                                                     |
+| CE_03       | 400                                   | processing_error      | Capture attempt failed while processing with the connector                                                                                                          | Capture failed for the payment at the connector. Please retry the payment                                                                                                            |
 | CE_04       | 400                                   | processing_error      | The card data is invalid                                                                                                                                            | Invalid card data passed. Please pass valid card data                                                                                                                                |
 | CE_05       | 400                                   | processing_error      | The card has expired                                                                                                                                                | Card expired. Please pass valid card data                                                                                                                                            |
-| CE_06       | 400                                   | processing_error      | Refund failed while processing with the connector. Retry refund                                                                                                         | Refund failed to process at the connector. Please retry refund                                                                                                                       |
-| CE_07       | 400                                   | processing_error      | Verification failed while processing with the connector. Retry operation                                                                                                | Retry the operation again as verification failed at the connector                                                                                                                    |
-| CE_08       |                                       | processing_error      | Dispute operation failed while processing with connector. Retry operation                                                                                           |   |
+| CE_06       | 400                                   | processing_error      | Refund failed while processing with the connector. Retry refund                                                                                                     | Refund failed to process at the connector. Please retry refund                                                                                                                       |
+| CE_07       | 400                                   | processing_error      | Verification failed while processing with the connector. Retry operation                                                                                            | Retry the operation again as verification failed at the connector                                                                                                                    |
+| CE_08       |                                       | processing_error      | Dispute operation failed while processing with connector. Retry operation                                                                                           | Retry the operation again as dispute failed at the connector                                                                                                                                   |
 | HE_00       | 500                                   | server_not_available  | Something went wrong                                                                                                                                                | Please retry the operation. If the error still persists, please reach out to Hyperswitch support                                                                                         |
-| HE_01       | 400                                   | duplicate_request     | Duplicate refund request. Refund already attempted with the refund ID                                                                                               | Please verify the refund id and no action required if the refund is already attempted                                                                                                |
-| HE_01       | 400                                   | duplicate_request     | Duplicate mandate request. Mandate already attempted with the Mandate ID                                                                                            | Please verify the mandate id and no action required if the mandate is already created                                                                                                |
-| HE_01       | 400                                   | duplicate_request     | The merchant account with the specified details already exists in our records                                                                                       | Please verify the merchant account details and no action required if the merchant account is already created                                                                         |
-| HE_01       | 400                                   | duplicate_request     | The merchant connector account with the specified details already exists in our records                                                                             | Please verify the merchant connector account details and no action required if the merchant connector account is already created                                                     |
-| HE_01       | 400                                   | duplicate_request     | The payment method with the specified details already exists in our records                                                                                         | Please verify the mandate id and no action required if the mandate is already created                                                                                                |
-| HE_02       | 400                                   | object_not_found      | Refund does not exist in our records                                                                                                                                | Please verify the refund details and enter valid details                                                                                                                             |
-| HE_02       | 400                                   | object_not_found      | Customer does not exist in our records                                                                                                                              | Please verify the customer details and enter valid details                                                                                                                           |
-| HE_02       | 400                                   | object_not_found      | Payment does not exist in our records                                                                                                                               | Please verify the payment details and enter valid details                                                                                                                            |
-| HE_02       | 400                                   | object_not_found      | Payment method does not exist in our records                                                                                                                        | Please verify the payment method details and enter valid details                                                                                                                     |
-| HE_02       | 400                                   | object_not_found      | Merchant account does not exist in our records                                                                                                                      | Please verify the merchant account details and enter valid details                                                                                                                   |
-| HE_02       | 400                                   | object_not_found      | Merchant connector account does not exist in our records                                                                                                            | Please verify the merchant connector details and enter valid details                                                                                                                 |
-| HE_02       | 400                                   | object_not_found      | Resource ID does not exist in our records                                                                                                                           | Please verify the resource ID and enter valid details                                                                                                                                |
-| HE_02       | 400                                   | object_not_found      | Mandate does not exist in our records                                                                                                                               | Please verify the mandate details and enter valid details                                                                                                                            |
-| HE_03       | 400                                   | validation_error      | Refunds not possible through Hyperswitch. Please raise Refunds through the “connector” dashboard                                                                        | Please raise refunds request from the respective connector’s dashboard as the connectors don’t provide a Refunds API for Hyperswitch to process                                      |
-| HE_03       | 400                                   | validation_error      | Mandate Validation Failed                                                                                                                                           | Please verify the mandate details again and enter valid details                                                                                                                      |
-| HE_04       | 400                                   | validation_error      | The payment has not succeeded yet. Please pass a successful payment to initiate refund                                                                              | Please verify the request parameters and retry the payment. If the error still persists, please reach out to Hyperswitch support                                                     |
-| HE_04       | 400                                   | object_not_found      | Successful payment not found for the given payment id                                                                                                               | Please verify the payment details and status as you can attempt refunds only for payments with success status                                                                        |
-| HE_04       | 400                                   | object_not_found      | The connector provided in the request is incorrect or not available                                                                                                 | Please verify your connector configuration and provide a valid connector that is enabled for your account                                                                            |
-| HE_04       | 400                                   | object_not_found      | Address does not exist in our records                                                                                                                               | Please verify the address details and pass valid address details                                                                                                                     |
-| HE_05       |
-| HE_06       |
-| WE_01       |||||
-| WE_02       |||||
-| WE_03       |||||
-| WE_04       |||||
-| WE_05       |||||
+| HE_02       | 400                                   | duplicate_request     | Duplicate refund request. Refund already attempted with the refund ID                                                                                               | Please verify the refund id and no action required if the refund is already attempted                                                                                                |
+| HE_03       | 400                                   | duplicate_request     | Duplicate mandate request. Mandate already attempted with the Mandate ID                                                                                            | Please verify the mandate id and no action required if the mandate is already created                                                                                                |
+| HE_04       | 400                                   | duplicate_request     | The merchant account with the specified details already exists in our records                                                                                       | Please verify the merchant account details and no action required if the merchant account is already created                                                                         |
+| HE_05       | 400                                   | duplicate_request     | The merchant connector account with the specified profile_id and connector_label already exists in our records                                                      | Please verify the merchant connector account details and no action required if the merchant connector account is already created                                                     |
+| HE_06       | 400                                   | duplicate_request     | The payment method with the specified details already exists in our records                                                                                         | Please verify the mandate id and no action required if the mandate is already created                                                                                                |
+| HE_10       | 400                                   | object_not_found      | Refund does not exist in our records                                                                                                                                | Please verify the refund details and enter valid details                                                                                                                             |
+| HE_11       | 400                                   | object_not_found      | Customer does not exist in our records                                                                                                                              | Please verify the customer details and enter valid details                                                                                                                           |
+| HE_13       | 400                                   | object_not_found      | Payment does not exist in our records                                                                                                                               | Please verify the payment details and enter valid details                                                                                                                            |
+| HE_14       | 400                                   | object_not_found      | Payment method does not exist in our records                                                                                                                        | Please verify the payment method details and enter valid details                                                                                                                     |
+| HE_15       | 400                                   | object_not_found      | Merchant account does not exist in our records                                                                                                                      | Please verify the merchant account details and enter valid details                                                                                                                   |
+| HE_16       | 400                                   | object_not_found      | Merchant connector account does not exist in our records                                                                                                            | Please verify the merchant connector details and enter valid details                                                                                                                 |
+| HE_19       | 400                                   | object_not_found      | Resource ID does not exist in our records                                                                                                                           | Please verify the resource ID and enter valid details                                                                                                                                |
+| HE_20       | 400                                   | object_not_found      | Mandate does not exist in our records                                                                                                                               | Please verify the mandate details and enter valid details                                                                                                                            |
+| HE_29       | 400                                   | validation_error      | Refunds not possible through Hyperswitch. Please raise Refunds through the “connector” dashboard                                                                    | Please raise refunds request from the respective connector’s dashboard as the connectors don’t provide a Refunds API for Hyperswitch to process                                      |
+| HE_30       | 400                                   | validation_error      | Mandate Validation Failed                                                                                                                                           | Please verify the mandate details again and enter valid details                                                                                                                      |
+| HE_31       | 400                                   | validation_error      | The payment has not succeeded yet. Please pass a successful payment to initiate refund                                                                              | Please verify the request parameters and retry the payment. If the error still persists, please reach out to Hyperswitch support                                                     |
+| HE_34       | 400                                   | object_not_found      | Successful payment not found for the given payment id                                                                                                               | Please verify the payment details and status as you can attempt refunds only for payments with success status                                                                        |
+| HE_35       | 400                                   | object_not_found      | The connector provided in the request is incorrect or not available                                                                                                 | Please verify your connector configuration and provide a valid connector that is enabled for your account                                                                            |
+| HE_36       | 400                                   | object_not_found      | Address does not exist in our records                                                                                                                               | Please verify the address details and pass valid address details                                                                                                                     |
